# langid

./: Cargo.toml  README.md  convert.py
examples/: classify.rs  rank.rs
src/: lib.rs
