[package]

name = "langid"
version = "1.0.0"
edition = "2024"
license = "MIT"
readme = "README.md"
repository = "https://github.com/frederik-uni/langid"
documentation = "https://docs.rs/langid"
description = "A fast and lightweight language identification library in Rust, inspired by py3langid."
keywords = ["language", "detection", "nlp", "langid", "py3langid", "text"]

[dependencies]
